将 jpa.open-in-view 修改为 false。并修复相关的错误。